k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iris-classifier-api
  labels:
    app: iris-classifier
    component: api
spec:
  type: LoadBalancer
  selector:
    app: iris-classifier
    component: api
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  sessionAffinity: None
